# ChangeLog for dev-perl/CGI
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/CGI/ChangeLog,v 1.19 2003/08/01 16:38:02 mcummings Exp $

*CGI-2.99 (01 Aug 2003)

  01 Aug 2003; Michael Cummings <mcummings@gentoo.org> CGI-2.99.ebuild:
  CPAN Version bump

*CGI-2.98 (23 Jul 2003)

  23 Jul 2003; <rac@gentoo.org> CGI-2.98.ebuild:
  Upstream version bump, install into vendordir

  23 Jul 2003; Michael Cummings <mcummings@gentoo.org> CGI-2.97.ebuild:
  Had confirmation from arch's that this is fine to release. See
  http://www.securityfocus.com/bid/8231 for security bulletin
  regarding bug in
  cross-site scripting vulnerability in CGI.pm
      

  23 Jul 2003; Michael Cummings <mcummings@gentoo.org> CGI-2.97.ebuild:
  Unmasking for x86. There is a security fix for cross site scripting included.

*CGI-2.97 (16 Jul 2003)

  16 Jul 2003; Michael Cummings <mcummings@gentoo.org> CGI-2.97.ebuild:
  CPAN Version bump

  31 May 2003; Michael Cummings <mcummings@gentoo.org> CGI-2.81.ebuild,
  CGI-2.93.ebuild:
  Added missing DEPEND for File-Spec

*CGI-2.93 (01 May 2003)

  01 May 2003; <rac@gentoo.org> CGI-2.91.ebuild, CGI-2.91.ebuild,
  CGI-2.93.ebuild:
  Upstream version bump, required to enable make test in mod_perl

*CGI-2.81 (26 Mar 2003)

  26 Mar 2003; <rac@gentoo.org> CGI-2.81.ebuild, CGI-2.91.ebuild:
  We had a situation (bug #18150) where the version of dev-perl/CGI was
  between that in the perl 5.6.1 and the 5.8.0 core.  After discussions
  with dragon, avenj, carpaski, and lostlogic, it seemed most prudent to
  bring the stable standalone CGI.pm version to 2.81 (same as in the
  5.8.0 core).

*CGI-2.78-r3 (26 Mar 2003)

  26 Mar 2003; <rac@gentoo.org> CGI-2.78-r3.ebuild:
  temporary back out #18150 fix until can fix properly

  26 Mar 2003; <rac@gentoo.org> CGI-2.78-r3.ebuild:
  Change perl dependency to <=5.6.1, so as not to overwrite the newer version in