@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/CGI/CGI-2.97.ebuild,v 1.3 2003/07/23 19:49:34 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/CGI/CGI-2.97.ebuild,v 1.4 2003/08/13 22:25:43 rac Exp $
 
 inherit perl-module
 
@@ -12,6 +12,6 @@ HOMEPAGE="http://search.cpan.org/author/L/LD/LDS/CGI.pm-${PV}/"
 
 SLOT="0"
 LICENSE="Artistic | GPL-2"
-KEYWORDS="x86 amd64 ppc sparc alpha"
+KEYWORDS="x86 amd64 ppc sparc alpha mips"
 
-DEPEND=">=dev-perl/File-Spec-0.82"
+newdepend "|| ( >=dev-perl/File-Spec-0.82 >=dev-lang/perl-5.8.0-r12 )"
