@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/CGI/CGI-2.99.ebuild,v 1.1 2003/08/01 16:38:02 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/CGI/CGI-2.99.ebuild,v 1.2 2003/08/13 22:25:43 rac Exp $
 
 inherit perl-module
 
@@ -13,5 +13,5 @@ HOMEPAGE="http://search.cpan.org/author/L/LD/LDS/CGI.pm-${PV}/"
 IUSE=""
 SLOT="0"
 LICENSE="Artistic | GPL-2"
-KEYWORDS="~x86 ~amd64 ~ppc ~sparc ~alpha"
+KEYWORDS="~x86 ~amd64 ~ppc ~sparc ~alpha ~mips"
 newdepend ">=perl-5.8.0-r12"
