@@ -1,11 +1,11 @@
 MD5 30d9aeaa69d5d18d25ab7ef0e8984f2e CGI-2.81.ebuild 540
+MD5 e9da6ca557e2e38125c67b60cf947c7f CGI-2.97.ebuild 593
+MD5 94621925a5c35c54beecf7ea08dec07d CGI-2.99.ebuild 591
+MD5 57d2453510a21f0ab8aae73985e9892d ChangeLog 3185
+MD5 aee184947435344f5ae6c6d0cb22761c CGI-2.98.ebuild 591
 MD5 11a34b2c5b271a093e1f63e93b0cd396 CGI-2.93.ebuild 543
-MD5 6910a7fcee1cce8536bf0608244b688e ChangeLog 3028
-MD5 1b78817d555a2c8333a5108e19010298 CGI-2.99.ebuild 591
-MD5 b0295ffa8f8a642164353a28b6ad1901 CGI-2.97.ebuild 558
-MD5 7bad14ab573680aed37a394eeb8ac443 CGI-2.98.ebuild 585
 MD5 004d3436621843c3ba773caccdd2b636 files/digest-CGI-2.81 63
 MD5 e41fdec8a3e011d93781c2f60f6ea6c0 files/digest-CGI-2.93 63
 MD5 23a07190ba7cc2a64312ca214197d18d files/digest-CGI-2.97 63
-MD5 7f4f1fae5caac10b7ea1621e26a748a3 files/digest-CGI-2.99 63
 MD5 476dd21db94f66eb4e399bdc9165c7fd files/digest-CGI-2.98 63
+MD5 7f4f1fae5caac10b7ea1621e26a748a3 files/digest-CGI-2.99 63
